--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,26 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
-  <header class="nav">
-    <h1>Norsk Industri - Step Sequencer</h1>
-    <button id="start">start</button>
-    <button id="stop">stop</button>
+  <header class="header">
+    <h1 class="sr-only">Norsk Industri</h1>
+    <img class="logo" alt="logo" src="img/norsk-industri-logo-bla-jpg.jpg">
   </header>
-  <div>
-    <button id="1">1</button>
-    <button id="2">2</button>
-    <button id="3">3</button>
-    <button id="4">4</button>
-    <button id="5">5</button>
-    <button id="6">6</button>
+  <div id="container">
+    <h1 id="title">The Sounds of Norway</h1>
+  </div>
+  <div id="text">
+  </div>
+  <div class="row">
+    <button id="pause" class="btn" onclick="createAudio()"><i class="fa fa-play" aria-hidden="true"></i>
+</button>
+    <button id="pause" class="btn" onclick="stopAudio()"><i class="fa fa-stop" aria-hidden="true"></i>
+</button>
   </div>
   <!-- <canvas class="canvas" style="width: 100%; height: 100%;" ></canvas> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
   <script src="scripts.js"></script>
 </body>
 </html>
